# pyo3-mesonpy

./: .gitignore  Cargo.toml  README.md  meson.build  pixi.toml  pyproject.toml
.github/workflows/: CI.yml
pixi-packages/meson/: pixi.toml
src/: lib.rs
subprojects/portable-atomic-1.14.0/: .cargo_vcs_info.json  Cargo.toml
subprojects/pyo3-0.29.0/: .cargo_vcs_info.json  Cargo.toml
subprojects/pyo3-0.29.0/src/: call.rs  instance.rs  lib.rs
subprojects/pyo3-0.29.0/src/conversions/: anyhow.rs  bigdecimal.rs  bytes.rs  chrono.rs  chrono_tz.rs  either.rs  eyre.rs  hashbrown.rs  indexmap.rs  jiff.rs  num_bigint.rs  num_complex.rs  num_rational.rs  ordered_float.rs  rust_decimal.rs  serde.rs  smallvec.rs  time.rs  uuid.rs
subprojects/pyo3-0.29.0/src/impl_/: deprecated.rs
subprojects/pyo3-0.29.0/src/pyclass/: guard.rs
subprojects/pyo3-0.29.0/src/types/: any.rs  module.rs
subprojects/pyo3-0.29.0/tests/: test_class_init.rs
subprojects/pyo3-ffi-0.29.0/: .cargo_vcs_info.json  Cargo.toml
subprojects/pyo3-ffi-0.29.0/src/: lib.rs
subprojects/pyo3-macros-0.29.0/: .cargo_vcs_info.json
subprojects/pyo3-macros-0.29.0/src/: lib.rs
subprojects/pyo3-macros-backend-0.29.0/: .cargo_vcs_info.json  Cargo.toml
subprojects/pyo3-macros-backend-0.29.0/src/: pyclass.rs
